compiler/tests/en/errors/unused_param.salam
// EXPECT: E062
func f(a: int, b: int): int:
    ret a
end

func main: println f(1, 2) end
